[workspace]
default-members = ["kernel"]
members = ["user", "kernel"]
resolver = "2"

[workspace.dependencies]
log = "0.4.20"
riscv = "0.11.0"
sbi-rt = "0.0.3"
once_cell = { version = "1.19.0", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
buddy_system_allocator = "0.9.1"
bitflags = "2.4.2"