[workspace]
default-members = ["kernel"]
members = ["user", "kernel"]
resolver = "2"

[workspace.dependencies]
log = "0.4.20"
riscv = "0.11.0"
sbi-rt = "0.0.3"
once_cell = { version = "1.19.0", default-features = false }
num_enum = { version = "0.7.2", default-features = false }
buddy_system_allocator = "0.9.1"
bitflags = { version = "2.4.2", features = ["bytemuck"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.4"
bytemuck = { version = "1.14.3", features = ["derive"] }
bitfield-struct = "0.6"
xmas-elf = "0.9.1"
dotenvy = "0.15.7"
pid-allocator = { version = "0.1.5"}
